# OpenIMU

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  README.txt
applicationOpenimu/app/: AccDataDisplay.cpp  AccDataDisplay.h  AccDataDisplay.ui  ApplicationMenuBar.cpp  ApplicationMenuBar.h  CMakeLists.txt  CustomQmlScene.cpp  CustomQmlScene.h  DateSelectorLabel.cpp  DisplayDataAccelerometer.qml  DisplayStepNumber.qml  FullGraphDialog.ui  Main.cpp  MainWindow.cpp  MainWindow.h  RangeSlider.cpp  RangeSlider.h  about.ui  application_openimu.pro  audio.qrc  help.ui  images.qrc  qml.qrc  rangeSlider.qml  test_slider_chart.qml
applicationOpenimu/app/acquisition/: AccelerometerReader.cpp  CJsonSerializer.cpp  CJsonSerializer.h  CMakeLists.txt  IJsonSerializable.h  ObjectInfo.cpp  ObjectInfo.h  RecordInfo.cpp  RecordInfo.h  SensorDataPerHour.cpp  SensorDataPerSecond.cpp  SensorReader.cpp  WimuAcquisition.cpp  WimuAcquisition.h  WimuRecord.cpp  WimuRecord.h
applicationOpenimu/app/algorithm/: AlgorithmInfo.cpp  AlgorithmInfo.h  AlgorithmInfoSerializer.cpp  AlgorithmInfoSerializer.h  AlgorithmList.cpp  AlgorithmList.h  AlgorithmOutput.cpp  AlgorithmOutput.h  AlgorithmOutputInfo.cpp  AlgorithmOutputInfo.h  AlgorithmOutputInfoSerializer.cpp  AlgorithmOutputInfoSerializer.h  CMakeLists.txt  FilteredData.cpp
applicationOpenimu/app/core/: CMakeLists.txt  Caneva.h  caneva.cpp  caneva.h.Jn2748
applicationOpenimu/app/dialogs/: AboutDialog.h  AlgorithmParametersDialog.cpp  AlgorithmParametersDialog.h  CMakeLists.txt  FullGraphDialog.cpp  FullGraphDialog.h  HelpDialog.h  RecordsDialog.cpp  RecordsDialog.h
applicationOpenimu/app/graph/: CMakeLists.txt  ChartView.cpp  DataChart.cpp  DataChart.h
applicationOpenimu/app/logger/: CMakeLists.txt  Logger.cpp  Logger.h
applicationOpenimu/app/models/: CMakeLists.txt  Caneva.cpp  Caneva.h
applicationOpenimu/app/newAcquisition/: WimuAcquisition.cpp
applicationOpenimu/app/utilities/: CMakeLists.txt  OpenImuButton.h  PdfGenerator.cpp  PdfGenerator.h  Utilities.cpp  Utilities.h
applicationOpenimu/app/utils/: CMakeLists.txt  Utils.cpp  Utils.h
applicationOpenimu/app/views/: CMakeLists.txt
applicationOpenimu/app/widgets/: AccDataDisplay2.cpp  AccDataDisplay2.h  AccDataDisplay2.ui  ActivityTrackerResults.cpp  ActivityTrackerResults.h  AlgorithmDetailedView.cpp  AlgorithmDetailedView.h  AlgorithmModel.cpp  AlgorithmModel.h  AlgorithmParametersWindow.cpp  AlgorithmParametersWindow.h  AlgorithmTab.cpp  AlgorithmTab.cpp.d15992  AlgorithmTab.h  ApplicationMenuBar.cpp  ApplicationMenuBar.h  CMakeLists.txt  GenericAlgoResults.cpp  GenericAlgoResults.h  HomeWidget.cpp  HomeWidget.h  HomeWidget.ui  MainWidget.cpp  MainWidget.h  MyListWidget.h  MyTreeWidget.cpp  MyTreeWidget.h  RangeSlider.cpp  RangeSlider.h  RecordViewWidget.cpp  RecordViewWidget.h  RecordsWidget.cpp  RecordsWidget.h  ResultsTabWidget.cpp  ResultsTabWidget.h  StepCounterResults.cpp  StepCounterResults.h  StepCounterResults.ui  activitytrackerresults.ui  genericalgoresults.ui  (+1 more)
application_openimu/app/: CMakeLists.txt  about.ui  accdatadisplay.cpp  accdatadisplay.h  application_openimu.pro  applicationmenu.cpp  applicationmenu.h  applicationmenubar.cpp  applicationmenubar.h  customqmlscene.cpp  customqmlscene.cpp.orig  customqmlscene.h  dateselectorlabel.cpp  displayActivityTime.qml  displayStepNumber.qml  help.ui  images.qrc  layout1.qml  main.cpp  mainwindow.cpp  mainwindow.h  mytreewidget.cpp  mytreewidget.h  qml.qrc  rangeslider.cpp  rangeslider.h  widget.cpp  widget.h
application_openimu/app/acquisition/: CMakeLists.txt  MagnetometerReader.cpp  MagnetometerReader.h  SensorDataPerDay.cpp  SensorDataPerHour.cpp  SensorDataPerHour.h  SensorReader.cpp  SensorReader.h
application_openimu/app/algorithm/: CMakeLists.txt
application_openimu/app/controllers/: toolbarcontroller.cpp  toolbarcontroller.h
application_openimu/app/dialogs/: CMakeLists.txt  aboutdialog.cpp  helpdialog.cpp
application_openimu/app/models/: CMakeLists.txt  caneva.cpp  caneva.h
application_openimu/app/newAcquisition/: CMakeLists.txt  wimuacquisition.cpp  wimuacquisition.h
application_openimu/app/views/: CMakeLists.txt  toolbarview.cpp  toolbarview.h
benchmarks/benchmark/: CMakeLists.txt  main.cpp  testbenchmark.cpp  testbenchmark.h
lib_actimetry/src/: CMakeLists.txt  sample_test.cpp
plugins/vbLabelPlugin/: CMakeLists.txt  qmldir  vbLabel.qml  vblabel.h
python/: CMakeLists.txt  ImportManager.py  ImportWindow.py  MainWindow.ui  OpenIMU.py  OpenIMUApp.py  alembic.ini  core.qrc
python/alembic/versions/: 6b75a01d10b5_0_5_upgrade.py  976c9bb61bcc_added_settings_for_sensors.py  9f2446706f91_added_params_in_processed_data.py
python/app/: CMakeLists.txt  README.md
python/app/OpenIMUTest/: Algorithms.py  CMakeLists.txt  Charts.py  DataImporter.py  Jupyter.py  MainWindow.ui  Notebook.ipynb  OpenIMUTest.py  core.qrc
python/env/: CMakeLists.txt  README.md  requirements.txt
python/examples/: import_display_actigraph.py  import_display_wimu.py
python/lib/: README.md
python/libopenimu/: __init__.py
python/libopenimu/algorithms/: BaseAlgorithm.py  Evenson2008.py  FreedsonAdult1998.py  __init__.py  freedson_adult_1998.py
python/libopenimu/db/: DBExporter.py  DBGroup.py  DBManager.py  DBManagerOld.py  DBManagerUtils.py  SQLAlchemyTest.py  data_formats.py  sensor_types.py  sqlite.py
python/libopenimu/importers/: ActigraphImporter.py  AppleWatchImporter.py  BaseImporter.py  DataImporter.py  OpenIMUImporter.py  WIMUImporter.py  actigraph.py  importer_types.py  wimu.py
python/libopenimu/jupyter/: Jupyter.py
python/libopenimu/models/: Base.py  Calibration.py  Channel.py  DataSet.py  DataSource.py  Group.py  LogTypes.py  Participant.py  (+11 more)
python/notebooks/: Notebook.ipynb
python/resources/: core.qrc  stylesheet.qss  test.qml  test_data.mat
python/tests/: test_actigraph_import_to_db.py
unitTests/pipeline/: CMakeLists.txt  Main.cpp  TestPipeline.cpp  TestPipeline.h
unit_tests/pipeline/: CMakeLists.txt  main.cpp  testpipeline.cpp  testpipeline.cpp.autosave  testpipeline.h
(+646 files in other folders)
